<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryLightColor">

    <EditText
        android:id="@+id/et_newusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:fontFamily="@font/din"
        android:hint="@string/newusername"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgrey"
        android:textColorLink="@color/primaryDarkColor" />

    <EditText
        android:id="@+id/et_newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:fontFamily="@font/din"
        android:hint="@string/newpassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/darkgrey"
        android:textColorLink="@color/primaryDarkColor"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btn_addUserToDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_weight="2"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/din"
        android:insetBottom="0dp"
        android:padding="10dp"
        android:text="@string/btn_signup"
        android:textSize="18sp"
        app:cornerRadius="0dp" />

</LinearLayout>
