<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MapListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:paddingHorizontal="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_goLiked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:drawableLeft="@drawable/ic_playlist_add_check_black_24dp"
            android:fontFamily="@font/din"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goLiked"
            android:text="@string/liked"
            android:textSize="12dp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_goCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:drawableLeft="@drawable/ic_my_location_black_24dp"
            android:fontFamily="@font/din"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="goCurrent"
            android:text="@string/goCurrent"
            android:textSize="12dp"
            app:cornerRadius="0dp" />

    </LinearLayout>


    <fragment

        xmlns:tools="http://schemas.android.com/tools"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/map_mapListActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="4"
        map:cameraTargetLat="49.2500"
        map:cameraTargetLng="-123.0000"
        map:cameraZoom="10.0"
        />

    <TextView
        android:id="@+id/searchresultstext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/loading"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/secondaryLightColor"
        android:layout_gravity="center"
        android:padding="2dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/primaryColor">

        <Spinner
            android:id="@+id/spinner_numResults"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginHorizontal="25dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:entries="@array/choices" />
<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginRight="@dimen/rightColonMargin"-->
<!--            android:text="@string/topResultsText"/>-->


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:fontFamily="@font/din"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:onClick="updateSearch_Likes"
            android:text="@string/byLikes"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12dp"
            app:cornerRadius="0dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/primaryColor"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:fontFamily="@font/din"
            android:insetTop="0dp"

            android:insetBottom="0dp"
            android:onClick="updateSearch_Distance"
            android:text="@string/byDistance"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12dp"
            app:cornerRadius="0dp" />


    </LinearLayout>

    <ListView
        android:id="@+id/lv_ArtList_Fragment"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="4"/>

</LinearLayout>